--- a/decrypt/index.html
+++ b/decrypt/index.html
@@ -1,41 +1,148 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HappyEdit — Unlock PDF</title>
-  <meta name="description" content="Remove password protection from PDF (if you know the password). The resulting PDF is reconstructed as images (keeps visual pages).">
-  <link rel="stylesheet" href="../assets/styles.css">
+  <meta name="description" content="Remove password protection from PDF (if you know the password). The resulting PDF is reconstructed as images. All processing happens locally in your browser.">
   <link rel="icon" href="../assets/favicon.png" type="image/png">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/styles.css">
+
   <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: radial-gradient(1200px 600px at 10% 10%, rgba(123,97,255,0.18), transparent 10%),
+                  radial-gradient(1000px 500px at 90% 90%, rgba(45,212,191,0.12), transparent 12%),
+                  linear-gradient(180deg,#0f172a,#0b3e6b);
+      color: white;
+      min-height: 100vh;
+      margin: 0;
+      padding: 32px 20px;
+    }
+
+    .wrap {
+      max-width: 1000px;
+      margin: 0 auto;
+      position: relative;
+      z-index: 10;
+    }
+
+    header{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      margin-bottom:32px;
+    }
+    header .logo{
+      font-size:1.8rem;
+      font-weight:700;
+      color:#fff;
+      text-decoration:none;
+    }
+    header nav a{
+      color: rgba(255,255,255,0.85);
+      text-decoration:none;
+      font-weight:600;
+    }
+    header nav a:hover{color:#7b61ff;}
+
+    h1{margin-bottom:12px;}
+    p.lead{color:rgba(255,255,255,0.85); margin-bottom:20px;}
+
+    .card {
+      background: rgba(255,255,255,0.12);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border-radius:16px;
+      border:1px solid rgba(255,255,255,0.08);
+      padding:20px;
+      box-shadow:0 10px 30px rgba(2,6,23,0.55);
+      transition: transform 0.22s, box-shadow 0.22s;
+      margin-bottom:20px;
+    }
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 18px 40px rgba(2,6,23,0.6);
+    }
+
+    label.file-label{
+      display:block;
+      margin-bottom:12px;
+      font-weight:600;
+      font-size:14px;
+    }
+    input[type="file"], input[type="password"]{
+      width:100%;
+      padding:8px 12px;
+      border-radius:10px;
+      border:none;
+      margin-top:4px;
+    }
+
+    .btn, .btn-primary {
+      cursor:pointer;
+      padding:10px 16px;
+      border-radius:12px;
+      border:none;
+      font-weight:700;
+      transition: transform 0.18s;
+      text-decoration:none;
+      text-align:center;
+      display:inline-block;
+    }
+    .btn{
+      background: rgba(255,255,255,0.08);
+      color:#fff;
+    }
+    .btn:hover{transform: translateY(-2px);}
+    .btn-primary{
+      background: linear-gradient(90deg, #7b61ff, #2dd4bf);
+      color:#041124;
+    }
+
+    #progress{margin-top:12px;color:#fff;}
+
+    footer{
+      text-align:center;
+      color: rgba(255,255,255,0.78);
+      margin-top:40px;
+      font-size:0.9rem;
+    }
+
+  </style>
 </head>
 <body>
-  <header class="site-header">
-    <a class="logo" href="../">HappyEdit</a>
-    <nav><a href="../">Home</a></nav>
-  </header>
+  <div class="wrap">
+    <header>
+      <a class="logo" href="../">HappyEdit</a>
+      <nav><a href="../">Home</a></nav>
+    </header>
 
-  <main class="container">
-    <h1>Unlock PDF (Remove Password)</h1>
-    <p class="lead">If you know the password, upload the file and enter the password. The site will recreate the PDF pages as images and produce an unlocked PDF.</p>
+    <main>
+      <h1>Unlock PDF</h1>
+      <p class="lead">If you know the password, upload the file and enter the password. The site will recreate the PDF pages as images and produce an unlocked PDF.</p>
 
-    <div class="card">
-      <label class="file-label">Encrypted PDF
-        <input id="encFile" type="file" accept="application/pdf">
-      </label>
+      <div class="card">
+        <label class="file-label">Encrypted PDF
+          <input id="encFile" type="file" accept="application/pdf">
+        </label>
 
-      <input id="pwd" placeholder="Enter password" type="password" />
+        <input id="pwd" placeholder="Enter password" type="password" />
 
-      <div class="actions">
-        <button id="unlockBtn" class="btn btn-primary" disabled>Unlock & Rebuild</button>
+        <div class="actions" style="margin-top:12px;">
+          <button id="unlockBtn" class="btn-primary" disabled>Unlock & Rebuild</button>
+        </div>
+
+        <div id="progress"></div>
       </div>
+    </main>
 
-      <div id="progress" style="margin-top:12px;color:#666"></div>
-    </div>
-  </main>
-
-  <footer class="site-footer">© 2025 HappyEdit</footer>
+    <footer>© 2025 HappyEdit — Files processed locally in your browser</footer>
+  </div>
 
 <script>
 const { PDFDocument } = PDFLib;
@@ -59,14 +166,12 @@ unlockBtn.addEventListener('click', async () => {
   const password = pwdEl.value || '';
   progress.textContent = 'Loading PDF (attempting to decrypt)...';
   try {
-    // Try to open with pdf.js with password
     const loadingTask = pdfjsLib.getDocument({ data: encBuffer, password });
     const pdf = await loadingTask.promise;
     const num = pdf.numPages;
-    progress.textContent = `PDF decrypted. Rendering ${num} pages to images... This may take a while.`;
-    // render each page to canvas and collect images
+    progress.textContent = `PDF decrypted. Rendering ${num} pages...`;
     const images = [];
-    for (let i=1;i<=num;i++) {
+    for (let i=1;i<=num;i++){
       const page = await pdf.getPage(i);
       const viewport = page.getViewport({ scale: 1.5 });
       const canvas = document.createElement('canvas');
@@ -74,32 +179,31 @@ unlockBtn.addEventListener('click', async () => {
       canvas.height = viewport.height;
       const ctx = canvas.getContext('2d');
       await page.render({ canvasContext: ctx, viewport }).promise;
-      const dataUrl = canvas.toDataURL('image/jpeg', 0.9);
-      images.push({dataUrl, width: canvas.width, height: canvas.height});
+      images.push({dataUrl: canvas.toDataURL('image/jpeg', 0.9), width:canvas.width, height:canvas.height});
       progress.textContent = `Rendered ${i}/${num} pages...`;
-      await new Promise(r => setTimeout(r, 50));
+      await new Promise(r=>setTimeout(r,50));
     }
-    progress.textContent = 'Rebuilding PDF (images -> pages)...';
+    progress.textContent = 'Rebuilding PDF...';
     const outPdf = await PDFDocument.create();
-    for (const img of images) {
-      const imgBytes = await fetch(img.dataUrl).then(r => r.arrayBuffer());
+    for(const img of images){
+      const imgBytes = await fetch(img.dataUrl).then(r=>r.arrayBuffer());
       const jpg = await outPdf.embedJpg(imgBytes);
       const page = outPdf.addPage([img.width, img.height]);
-      page.drawImage(jpg, { x: 0, y: 0, width: img.width, height: img.height });
+      page.drawImage(jpg,{x:0,y:0,width:img.width,height:img.height});
     }
     const outBytes = await outPdf.save();
-    const blob = new Blob([outBytes], {type: 'application/pdf'});
+    const blob = new Blob([outBytes],{type:'application/pdf'});
     const a = document.createElement('a');
-    a.href = URL.createObjectURL(blob);
-    a.download = 'happyedit-unlocked.pdf';
+    a.href=URL.createObjectURL(blob);
+    a.download='happyedit-unlocked.pdf';
     document.body.appendChild(a);
     a.click();
     a.remove();
-    progress.textContent = 'Done. Download should start. Note: output pages are images (text not selectable).';
-  } catch (err) {
+    progress.textContent='Done. Download should start.';
+  } catch(err){
     console.error(err);
-    alert('Failed to decrypt/open PDF. Make sure the password is correct and the file is a supported PDF.');
-    progress.textContent = '';
+    alert('Failed to decrypt/open PDF. Make sure password is correct and file is supported.');
+    progress.textContent='';
   }
 });
 </script>
